unpackaged/main/default/objects/litify_ext__Deposition__c/litify_ext__Deposition__c.object-meta.xml
<CustomObject>
    <label>Deposition</label>
    <nameField>
        <label>Deposition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depositions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>