unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Access_Code_Pin__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Access_Code_Pin__c</fullName>
    <inlineHelpText>Dial In Number Access Code or Pin</inlineHelpText>
    <label>Access Code / Pin</label>
    <length>25</length>
    <type>Text</type>
</CustomField>