unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Assigned_Attorney__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Assigned_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Attorney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Depositions</relationshipName>
    <type>Lookup</type>
</CustomField>