unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Cancelled__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>