unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Court_Reporter__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Court_Reporter__c</fullName>
    <label>Court Reporter</label>
    <length>225</length>
    <type>Text</type>
</CustomField>