unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Depo_Needed__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Depo_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Depo Needed</label>
    <type>Checkbox</type>
</CustomField>