unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Deponent__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Deponent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deponent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Depositions(Legacy)</relationshipLabel>
    <relationshipName>Depositions_Legacy</relationshipName>
    <type>Lookup</type>
</CustomField>