unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Deposition_Completed__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Deposition_Completed__c</fullName>
    <label>Deposition Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>