unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Deposition_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Deposition_Date_Only__c</fullName>
    <inlineHelpText>Date only?</inlineHelpText>
    <label>Deposition Date Only</label>
    <type>Date</type>
</CustomField>