unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Deposition_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Deposition_End_Date_Time__c</fullName>
    <label>Deposition End Date/Time</label>
    <type>DateTime</type>
</CustomField>