unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Deposition_Notes__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Deposition_Notes__c</fullName>
    <label>Deposition Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>