unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Deposition_Time__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Deposition_Time__c</fullName>
    <formula>TIMEVALUE(litify_ext__Deposition_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposition Time</label>
    <type>Time</type>
</CustomField>