unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Dial_In_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Dial_In_Number__c</fullName>
    <label>Dial In Number</label>
    <type>Phone</type>
</CustomField>