unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Hearing__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Hearing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hearing</label>
    <referenceTo>litify_ext__Hearing__c</referenceTo>
    <relationshipLabel>Depositions</relationshipLabel>
    <relationshipName>Depositions</relationshipName>
    <type>Lookup</type>
</CustomField>