unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Status__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Scheduled</fullName>
                <default>true</default>
                <label>To Be Scheduled</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>