unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Testimony__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Testimony__c</fullName>
    <label>Testimony</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>