unpackaged/main/default/objects/litify_ext__Deposition__c/fields/litify_ext__Type_of_Deponent__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Type_of_Deponent__c</fullName>
    <label>Type of Deponent</label>
    <length>200</length>
    <type>Text</type>
</CustomField>